[tool.poetry]
name = "vip_qml-lstm"
version = "0.1.0"
description = ""
authors = ["TanglyEagle7718"]

[tool.poetry.dependencies]
python = "^3.10"
qiskit = "^1.3.2"
matplotlib = "^3.10.0"
qiskit-machine-learning = "^0.8.2"
pandas = "^2.2.3"
yfinance = "^0.2.54"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
